convex geometry created upon importing of a 3D model

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "convex-hull": "^1.0.3",
     "gsap": "^3.10.4",
     "three": "^0.142.0"
   }
